* Fixed an issue where some cells in Activity Log would lay out incorrectly
* Adds support for sharing a blog via Reader.