@@ -1,2 +1,3 @@
 * Fixed an issue where some cells in Activity Log would lay out incorrectly
 * Adds support for sharing a blog via Reader.
+* Fix a crash in reader caused by a video with a fallback image.
